# footman

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  HANDOFF.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml  tasks.py  zensical.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  release.yml
comparison/: README.md  _project.py  bench_check.py  bench_compare.py
comparison/duty/: duties.py
comparison/footman/: tasks.py
comparison/invoke/: tasks.py
comparison/poe/: pyproject.toml
comparison/typer/: app.py
docs/: agents.md  api.md  ci.md  color-support.md  comparison.md  completion-bash.md  completion-fish.md  completion-nushell.md  completion-pwsh.md  completion-zsh.md  completion.md  composing.md  configuration.md  cookbook.md  coverage.md  custom-cli.md  getting-started.md  index.md  input.md  json.md  migrating.md  monorepos.md  orchestration.md  progress.md  reference.md  roadmap.md  taskdocs.md  testing.md  tools-bridge.md  tools.md  troubleshooting.md  typing.md
docs/includes/: abbreviations.md
scripts/: bench_completion.py  bench_import.py
src/footman/: __init__.py  __main__.py  _app.py  _colordata.py  _colorprobe.py  _complete.py  _describe.py  _drivers.py  _fetch.py  _gc.py  _paths.py  _progress.py  _provision.py  _refresh.py  _shellcomp.py  _stubgen.py  _suggest.py  _toolhelp.py  _toolspec.py  app.py  coerce.py  compose.py  config.py  context.py  discover.py  docstrings.py  executor.py  manifest.py  markdown.py  params.py  pytest_plugin.py  registry.py  schedule.py  split.py  testing.py  tools.py  tools.pyi
src/footman/_stubs/: __init__.pyi  basedpyright.pyi  bash.pyi  build.pyi  bun.pyi  cmake.pyi  cmd.pyi  coverage.pyi  cspell.pyi  djlint.pyi  docker.pyi  eclint.pyi  fish.pyi  gh.pyi  git.pyi  git_changelog.pyi  git_cliff.pyi  markdownlint.pyi  mkdocs.pyi  mypy.pyi  ninja.pyi  nu.pyi  prek.pyi  pwsh.pyi  pytest.pyi  python.pyi  ruff.pyi  ruff_format.pyi  twine.pyi  ty.pyi  uv.pyi  zensical.pyi  zsh.pyi
src/footman/tasks/: __init__.py  docs.py  tools.py
tests/: conftest.py  test_app.py  test_binding.py  test_branding.py  test_cascade.py  test_cli.py  test_complete.py  test_compose.py  test_context.py  test_docs_drift.py  test_docstrings.py  test_failfast.py  test_fetch.py  test_finalize.py  test_forward.py  test_gc.py  test_manifest.py  test_markdown.py  test_markers.py  test_opts.py  test_params.py  test_progress.py  test_provision.py  test_pytest_plugin.py  test_registry.py  test_runnable_groups.py  test_schedule.py  test_shellcomp.py  test_split.py  test_tasks_plugin.py  test_testing.py  test_tools.py  test_toolspec.py  typecheck_tools.py
tests/fixtures/: sample_tasks.py
