[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[project]
name = "footman"
version = "0.2.0"
description = "A task runner with typed commands, nested groups, and instant shell completion."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Willem Kokke", email = "willem@humain-studios.com" }]
keywords = ["task-runner", "cli", "completion", "duty", "typer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

# Zero runtime dependencies: the completion hot path must stay stdlib-only,
# and the execution path builds its CLI from function signatures directly.
dependencies = []

[project.urls]
Homepage = "https://github.com/willemkokke/footman"
Repository = "https://github.com/willemkokke/footman"
Issues = "https://github.com/willemkokke/footman/issues"

[project.scripts]
footman = "footman:main"
fm = "footman:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "basedpyright>=1.18",
]
# Incumbent task runners, installed only for the head-to-head comparison under
# comparison/. Never a footman runtime or dev dependency.
comparison = [
    "duty>=1.4",
    "invoke>=2.2",
    "poethepoet>=0.27",
    "typer>=0.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tasks fixtures deliberately shadow builtins (format, list) and take unused
# params to exercise the signature grammar.
"tests/**" = ["A", "B", "ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.basedpyright]
# First-party code only. comparison/ exercises third-party runners (duty,
# invoke, typer) whose stubs are incomplete and which are installed only in the
# `comparison` dependency group; it is linted by ruff but not type-checked here.
include = ["src", "tests", "scripts", "tasks.py"]
exclude = ["comparison"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingModuleSource = false

[tool.coverage.run]
branch = true
source = ["footman"]

[tool.coverage.report]
show_missing = true
exclude_also = ["if __name__ == .__main__.:", "raise NotImplementedError"]
